Bugfix reading targetplatform checked in (CVS path is ignored)